# mayday

./: Cargo.nix  Cargo.toml  LICENSE  README.md  default.nix  exact-source.nix  shell.nix
src/: cli.rs  logging.rs  main.rs  servers.rs  tailer.rs  vault.rs
