[package]
name = "mayday"
version = "0.1.0"
authors = ["Graham Christensen <graham@grahamc.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.0"
clap = "2.33.0"
reqwest = "0.9.20"
slog = "2.5.2"
slog-scope = "4.3.0"
slog-term = "2.4.2"
slog-async = "2.3.0"
hashicorp_vault = "0.7.0"

[patch.crates-io.hashicorp_vault]
git = "https://github.com/grahamc/vault-rs.git"
# for documentation:
#   branch = "leases-and-secrets-engines",
rev="148b22a4dc5d1e16999591f604db3305ea7415ef"
